fix vertical-align for image in button

--- a/theme/scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/style.css
+++ b/theme/scarborough/src/main/resources/org/apache/myfaces/tobago/renderkit/html/scarborough/standard/style/style.css
@@ -231,8 +231,9 @@ td.tobago-calendar-day-selected {
   font-weight: normal;
 }
 
-button img  {
+.tobago-button-default img  {
   margin-right: 5px;
+  vertical-align: middle;
 }
 
 /* selectBooleanCheckbox --------------------------------------------------- */
